--- a/index.html
+++ b/index.html
@@ -1,15 +1,34 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="index.css">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <link rel="shortcut icon"
+        href="https://upload.wikimedia.org/wikipedia/commons/thumb/0/04/ChatGPT_logo.svg/512px-ChatGPT_logo.svg.png">
+
     <title>Pathfinders</title>
+    <meta name="description" content="descripción de la web, se recomienda 90 caracteres">
+    <meta name="keywords" content="palabras clave, separadas, por comas">
+
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Título" />
+    <meta property="og:description" content="descripción de la web, se recomienda 90 caracteres" />
+    <meta property="og:image" content="https://www.youtube.com/s/desktop/12d6b690/img/favicon_144.png" />
+
+    <link rel="stylesheet" href="index.css">
+    <script type="module" src="js/app.js"></script>
 </head>
+
 <body>
-    <div id="attempts">Intentos restantes: <span id="attemptsCount">20</span></div>
-    <div class="grid-container" id="gridContainer"></div>
+    <level-component></level-component>
     <button id="resetButton" class="reset-button">Reset</button>
-    <script src="js/app.js"></script>
+    <script>
+        document.getElementById('resetButton').addEventListener('click', function() {
+            location.reload();
+        });
+    </script>
 </body>
+
+
 </html>
