--- a/index.html
+++ b/index.html
@@ -23,8 +23,10 @@
 <body>
     <level-component></level-component>
     <button id="resetButton" class="reset-button">Reset</button>
+    <button id="nextButton" class="next-button">Next level</button>
+
     <script>
-        document.getElementById('resetButton').addEventListener('click', function() {
+        document.getElementById('resetButton').addEventListener('click', function () {
             location.reload();
         });
     </script>
