--- a/select.html
+++ b/select.html
@@ -19,11 +19,13 @@
     <script type="module" src="js/app.js"></script>
 </head>
 
-<body style="background-color: darkgoldenrod;">
-    <reset-component></reset-component>
+<body>
     <return-component></return-component>
-    <level-component></level-component>
-    <travel-component></travel-component>
+    <a href="level.html">
+        <div>
+            Nivel
+        </div>
+    </a>
     <footer-component></footer-component>
 </body>
 
