--- a/index.html
+++ b/index.html
@@ -20,19 +20,7 @@
 </head>
 
 <body style="background-color: darkred;">
-    <div class="brand">
-        <img class="back" src="images/Brand_back.png">
-        <img class="text" src="images/brand_name.png">
-    </div>
-    <a href="select.html">
-        <div><h1>Niveles</h1></div>
-    </a>
-    <a href="select.html">
-        <div><h1>Niveles</h1></div>
-    </a>
-    <a href="select.html">
-        <div><h1>Niveles</h1></div>
-    </a>
+    <brand-component></brand-component>
     <footer-component></footer-component>
 </body>
 
