--- a/select.html
+++ b/select.html
@@ -21,11 +21,13 @@
 
 <body>
     <return-component></return-component>
-    <a href="level.html">
-        <div>
-            Nivel
-        </div>
-    </a>
+    <div class="container">
+        <a href="level.html">
+            <div>
+                Nivel
+            </div>
+        </a>
+    </div>
     <footer-component></footer-component>
 </body>
 
