--- a/select.html
+++ b/select.html
@@ -22,11 +22,127 @@
 <body>
     <return-component></return-component>
     <div class="container">
-        <a href="level.html">
-            <div>
-                Nivel
+        <div class="container_levels">
+            <div class="container_card">
+                <a href="level.html">
+                    <h2>01</h2>
+                </a>
             </div>
-        </a>
+            <div class="container_card">
+                <a href="level.html">
+                    <h2>02</h2>
+                </a>
+            </div>
+            <div class="container_card">
+                <a href="level.html">
+                    <h2>03</h2>
+                </a>
+            </div>
+            <div class="container_card">
+                <a href="level.html">
+                    <h2>04</h2>
+                </a>
+            </div>
+            <div class="container_card">
+                <a href="level.html">
+                    <h2>05</h2>
+                </a>
+            </div>
+            <div class="container_card">
+                <a href="level.html">
+                    <h2>06</h2>
+                </a>
+            </div>
+            <div class="container_card">
+                <a href="level.html">
+                    <h2>07</h2>
+                </a>
+            </div>
+            <div class="container_card">
+                <a href="level.html">
+                    <h2>08</h2>
+                </a>
+            </div>
+            <div class="container_card">
+                <a href="level.html">
+                    <h2>09</h2>
+                </a>
+            </div>
+            <div class="container_card">
+                <a href="level.html">
+                    <h2>10</h2>
+                </a>
+            </div>
+            <div class="container_card">
+                <a href="level.html">
+                    <h2>11</h2>
+                </a>
+            </div>
+            <div class="container_card">
+                <a href="level.html">
+                    <h2>12</h2>
+                </a>
+            </div>
+            <div class="container_card">
+                <a href="level.html">
+                    <h2>13</h2>
+                </a>
+            </div>
+            <div class="container_card">
+                <a href="level.html">
+                    <h2>14</h2>
+                </a>
+            </div>
+            <div class="container_card">
+                <a href="level.html">
+                    <h2>15</h2>
+                </a>
+            </div>
+            <div class="container_card">
+                <a href="level.html">
+                    <h2>16</h2>
+                </a>
+            </div>
+            <div class="container_card">
+                <a href="level.html">
+                    <h2>17</h2>
+                </a>
+            </div>
+            <div class="container_card">
+                <a href="level.html">
+                    <h2>18</h2>
+                </a>
+            </div>
+            <div class="container_card">
+                <a href="level.html">
+                    <h2>19</h2>
+                </a>
+            </div>
+            <div class="container_card">
+                <a href="level.html">
+                    <h2>20</h2>
+                </a>
+            </div>
+            <div class="container_card">
+                <a href="level.html">
+                    <h2>21</h2>
+                </a>
+            </div>
+        </div>
+        <div class="container_arrows">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                <title>arrow-left-bold</title>
+                <path d="M20,9V15H12V19.84L4.16,12L12,4.16V9H20Z" />
+            </svg>
+            <h2>1</h2>
+            <h2>2</h2>
+            <h2>3</h2>
+            <span>...</span>
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                <title>arrow-right-bold</title>
+                <path d="M4,15V9H12V4.16L19.84,12L12,19.84V15H4Z" />
+            </svg>
+        </div>
     </div>
     <footer-component></footer-component>
 </body>
