--- a/select.html
+++ b/select.html
@@ -129,6 +129,11 @@
                         <h2>21</h2>
                     </a>
                 </div>
+                <div class="container_card">
+                    <a href="level.html">
+                        <h2>22</h2>
+                    </a>
+                </div>  
             </div>
             <div class="container_arrows">
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
