--- a/select.html
+++ b/select.html
@@ -133,6 +133,16 @@
                     <a href="level.html">
                         <h2>22</h2>
                     </a>
+                </div> 
+                <div class="container_card">
+                    <a href="level.html">
+                        <h2>23</h2>
+                    </a>
+                </div>
+                <div class="container_card">
+                    <a href="level.html">
+                        <h2>24</h2>
+                    </a>
                 </div>  
             </div>
             <div class="container_arrows">
